WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274674
[visionOS] REGRESSION(
278712@main
) CRASH in RemoteMediaPlayerManagerProxy::handleVideoReceiverEndpointMessage
https://bugs.webkit.org/show_bug.cgi?id=274674
Summary
[visionOS] REGRESSION(278712@main) CRASH in RemoteMediaPlayerManagerProxy::ha...
Jer Noble
Reported
2024-05-24 12:02:28 PDT
[visionOS] REGRESSION(
278712@main
) CRASH in RemoteMediaPlayerManagerProxy::handleVideoReceiverEndpointMessage
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-05-24 12:02:35 PDT
<
rdar://problem/128258443
>
Alexey Proskuryakov
Comment 2
2024-05-27 10:35:16 PDT
https://github.com/WebKit/WebKit/pull/29075
EWS
Comment 3
2024-05-28 09:07:58 PDT
Committed
279382@main
(3759cba9ed6c): <
https://commits.webkit.org/279382@main
> Reviewed commits have been landed. Closing PR #29075 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug