[visionOS] REGRESSION(278712@main) CRASH in RemoteMediaPlayerManagerProxy::handleVideoReceiverEndpointMessage rdar://128258443 https://bugs.webkit.org/show_bug.cgi?id=274674

Reviewed by Andy Estes.

When adding the ability to cache and uncache VideoTarget objects in the GPU process, "uncaching" was signalled
by sending an empty identifier for the media player identifier field in VideoReceiverEndpointMessage. This causes
an issue when looking up MediaPlayer objects from a HashMap where the media player identifier is this empty
value.

Validate the mediaPlayerIdentifier value before using it as the key to the m_proxies map.

Drive-by: Also validate the mediaElementIdentifier() before using it.

* Source/WebKit/GPUProcess/media/RemoteMediaPlayerManagerProxy.cpp:
(WebKit::RemoteMediaPlayerManagerProxy::mediaPlayer):

Canonical link: https://commits.webkit.org/279382@main